--- a/src/locales/vi/footer.json
+++ b/src/locales/vi/footer.json
@@ -25,7 +25,7 @@
     "support": "Máy chủ hỗ trợ"
   },
   "bottom": {
-    "copyright": "© 2025 Keldo Bot. Mọi quyền được bảo lưu.",
+    "copyright": "© 2025 Keldo Bot.",
     "developer": "Phát triển bởi Huỳnh Trung Kiên (Kiên Học Code / Kolas)",
     "contact": "Liên hệ công việc:",
     "owner": "HUỲNH TRUNG KIÊN",
